--- a/index.html
+++ b/index.html
@@ -551,14 +551,13 @@ style="background: url(img/unit-2.jpg)no-repeat; background-size: cover;">
   <li class="list-inline-item mb-3"><a href="#" title="Lithium Battery Pack Production Lines"> Lithium Battery Pack Production Lines</a></li>
   <li class="list-inline-item mb-3"><a href="#"> Lithium Battery Separator Production Lines</a></li>
   <li class="list-inline-item mb-3"><a href="#" title="Lithium Battery Raw Material Components"> Lithium Battery Raw Material Components</a></li>
-  <li class="list-inline-item mb-3"><a href="#"> Electric Charging stations</a></li>
   </ul>
   </div>
 </div>
 </div>
 
 
-<div class="col-xl-4 col-lg-4 col-md-4 col-sm-12 col-xs-12 section_one text-center" 
+<!--<div class="col-xl-4 col-lg-4 col-md-4 col-sm-12 col-xs-12 section_one text-center" 
 style="background: url(img/unit-3.jpg)no-repeat; background-size: cover;">
 
 <div class="green-overlay">
@@ -573,7 +572,7 @@ style="background: url(img/unit-3.jpg)no-repeat; background-size: cover;">
   </ul>
   </div>
 </div>
-</div>
+</div>-->
 
 
 </div>
@@ -597,7 +596,7 @@ style="background: url(img/unit-3.jpg)no-repeat; background-size: cover;">
 <figcaption>
 <div class="imghvr1-content">      
 <h3 class="wt-title"><a href="#">Universal Cut Cells MBB Tabber Stringer</a></h3>
-<p class="mb-3 d-block">Unique Innovative European Double side Electric heating Solar PV Laminator for GW factories</p>
+<p class="mb-3 d-block">Advanced tabber stringer ensuring precision interconnection of cut cells with MBB technology.</p>
 <a href="#" class="site-button-link text-white">Read More</a>
 </div>
 </figcaption>
@@ -610,7 +609,7 @@ style="background: url(img/unit-3.jpg)no-repeat; background-size: cover;">
 <figcaption>
 <div class="imghvr1-content">      
 <h3 class="wt-title"><a href="#">Turnkey Solar PV Reliability Lab</a></h3>
-<p class="mb-3 d-block">High Speed High quality Top Brand MBB Solar Cells NDC Laser Cutter for GW Factories</p>
+<p class="mb-3 d-block">High-performance turnkey lab for solar PV reliability and durability evaluation.</p>
 <a href="#" class="site-button-link text-white">Read More</a>
 </div>
 </figcaption>
@@ -623,7 +622,7 @@ style="background: url(img/unit-3.jpg)no-repeat; background-size: cover;">
 <figcaption>
 <div class="imghvr1-content">     
 <h3 class="wt-title"><a href="#">Automatic Laser welding for 3W & ESS Lithium Battery Packs</a></h3>
-<p class="mb-3 d-block">Quality Inverter,Modules, Cables, Connectors and other Solar EPC BOS ready stocks Available</p>
+<p class="mb-3 d-block">Advanced automatic laser welding for lithium ESS and 3W packs.</p>
 <a href="#" class="site-button-link text-white">Read More</a>
 </div> 
 </figcaption>
@@ -636,7 +635,7 @@ style="background: url(img/unit-3.jpg)no-repeat; background-size: cover;">
 <figcaption>
 <div class="imghvr1-content">     
 <h3 class="wt-title"><a href="#">Battery Cell & Pack Testers</a></h3>
-<p class="mb-3 d-block">Turnkey Solution and Ready Stock Available for Lithium Battery Pack Assembly Machines</p>
+<p class="mb-3 d-block">Advanced battery cell and pack testers for reliable performance evaluation.</p>
 <a href="#" class="site-button-link text-white">Read More</a>
 </div> 
 </figcaption>
@@ -649,7 +648,7 @@ style="background: url(img/unit-3.jpg)no-repeat; background-size: cover;">
 <figcaption>
 <div class="imghvr1-content">     
 <h3 class="wt-title"><a href="#"> BESS Container Assembly Line & Component Solutions</a></h3>
-<p class="mb-3 d-block">Ready stock and on order supply of High Quality Top Brands for Lithium Cylinderical, Pouch & Prismatic Cells and BMS</p>
+<p class="mb-3 d-block">High-performance BESS container assembly line and component integration.</p>
 <a href="#" class="site-button-link text-white">Read More</a>
 </div> 
 </figcaption>
@@ -662,7 +661,7 @@ style="background: url(img/unit-3.jpg)no-repeat; background-size: cover;">
 <figcaption>
 <div class="imghvr1-content">     
 <h3 class="wt-title"><a href="#">Cooling Systems for C&I and BESS Solutions </a></h3>
-<p class="mb-3 d-block">Ready and OEM Solutions for High Standard Universal Electric Vehicle Charging Stations of European Quality with International Certifications</p>
+<p class="mb-3 d-block">Efficient cooling systems for C&I and BESS energy storage solutions.</p>
 <a href="#" class="site-button-link text-white">Read More</a>
 </div> 
 </figcaption>
@@ -957,8 +956,7 @@ style="background: url(img/unit-3.jpg)no-repeat; background-size: cover;">
 <p><span class="lnr lnr-heart"></span></p>
 <p class="counter-wrapper"><span class="solar"></span></p>
 <p class="text-block">Solar Production Lines</p>
-<p class="mt-3">Set up so far accumulated individual Equipments as well Turnkey Lines
-</p>
+<p class="mt-3">Set up so far accumulated individual Equipments as well Turnkey Lines</p>
 </div>
 
 
