--- a/index.html
+++ b/index.html
@@ -592,7 +592,7 @@ style="background: url(img/unit-3.jpg)no-repeat; background-size: cover;">
 <!-- COLUMNS 1 --> 
 <div class="col-lg-4 col-md-6  col-sm-6 mb-4">
 <div class="imghvr1 text-center">
-<img src="img/product-1.jpg" alt="Solar PV Laminator" title="Solar PV Laminator" class="w-100">
+<img src="img/product-1.png" alt="Universal Cut Cells MBB Tabber Stringer" title="Universal Cut Cells MBB Tabber Stringer" class="w-100">
 <figcaption>
 <div class="imghvr1-content">      
 <h3 class="wt-title"><a href="#">Universal Cut Cells MBB Tabber Stringer</a></h3>
@@ -605,7 +605,7 @@ style="background: url(img/unit-3.jpg)no-repeat; background-size: cover;">
 <!-- COLUMNS 2 --> 
 <div class="col-lg-4 col-md-6  col-sm-6 mb-4">
 <div class="imghvr1 text-center">
-<img src="img/product-2.jpg" alt="Solar MBB Cells NDC Laser Cutter" title="Solar MBB Cells NDC Laser Cutter" class="w-100">
+<img src="img/product-2.png" alt="Turnkey Solar PV Reliability Lab" title="Turnkey Solar PV Reliability Lab" class="w-100">
 <figcaption>
 <div class="imghvr1-content">      
 <h3 class="wt-title"><a href="#">Turnkey Solar PV Reliability Lab</a></h3>
@@ -618,11 +618,11 @@ style="background: url(img/unit-3.jpg)no-repeat; background-size: cover;">
 <!-- COLUMNS 3 --> 
 <div class="col-lg-4 col-md-6  col-sm-6 mb-4">
 <div class="imghvr1 text-center">
-<img src="img/product-3.jpg" alt="Solar EPC BOS Components" title="Solar EPC BOS Components">
+<img src="img/product-3.png" alt="Automatic Laser welding for 3000W & ESS Lithium Battery Packs" title="Automatic Laser welding for 3000W & ESS Lithium Battery Packs">
 <figcaption>
 <div class="imghvr1-content">     
-<h3 class="wt-title"><a href="#">Automatic Laser welding for 3W & ESS Lithium Battery Packs</a></h3>
-<p class="mb-3 d-block">Advanced automatic laser welding for lithium ESS and 3W packs.</p>
+<h3 class="wt-title"><a href="#">Automatic Laser welding for 3000W & ESS Lithium Battery Packs</a></h3>
+<p class="mb-3 d-block">Advanced automatic laser welding for lithium ESS and 3000W packs.</p>
 <a href="#" class="site-button-link text-white">Read More</a>
 </div> 
 </figcaption>
@@ -631,7 +631,7 @@ style="background: url(img/unit-3.jpg)no-repeat; background-size: cover;">
 <!-- COLUMNS 4 --> 
 <div class="col-lg-4 col-md-6  col-sm-6 mb-4">
 <div class="imghvr1 text-center">
-<img src="img/product-4.jpg" alt="Lithium Battery Pack Machines" title="Lithium Battery Pack Machines">
+<img src="img/product-4.png" alt="Battery Cell & Pack Testers" title="Battery Cell & Pack Testers">
 <figcaption>
 <div class="imghvr1-content">     
 <h3 class="wt-title"><a href="#">Battery Cell & Pack Testers</a></h3>
@@ -644,7 +644,7 @@ style="background: url(img/unit-3.jpg)no-repeat; background-size: cover;">
 <!-- COLUMNS 5 --> 
 <div class="col-lg-4 col-md-6  col-sm-6 mb-4">
 <div class="imghvr1 text-center">
-<img src="img/product-5.jpg" alt="Lithium Cells and BMS" title="Lithium Cells and BMS">
+<img src="img/product-5.png" alt="BESS Container Assembly Line & Component Solutions" title="BESS Container Assembly Line & Component Solutions">
 <figcaption>
 <div class="imghvr1-content">     
 <h3 class="wt-title"><a href="#"> BESS Container Assembly Line & Component Solutions</a></h3>
@@ -657,7 +657,7 @@ style="background: url(img/unit-3.jpg)no-repeat; background-size: cover;">
 <!-- COLUMNS 6 --> 
 <div class="col-lg-4 col-md-6  col-sm-6 mb-4">
 <div class="imghvr1 text-center">
-<img src="img/product-6.jpg" alt="E Charging Stations" title="E Charging Stations">
+<img src="img/product-6.png" alt="Cooling Systems for C&I and BESS Solutions" title="Cooling Systems for C&I and BESS Solutions">
 <figcaption>
 <div class="imghvr1-content">     
 <h3 class="wt-title"><a href="#">Cooling Systems for C&I and BESS Solutions </a></h3>
