--- a/index.html
+++ b/index.html
@@ -106,9 +106,9 @@
 <ul class="navbar-nav">
 <li class="nav-item mr-0"><a href="index.html" title="Home" class="nav-link active">Home </a></li>
 <li class="nav-item mr-0"><a href="about-us.html" title="About Us" class="nav-link">About Us</a></li>
-<li class="nav-item mr-0"><a href="solar.html" class="nav-link">Solar PV</a>
+<li class="nav-item mr-0"><a href="solar.html" title="Solar PV" class="nav-link">Solar PV</a>
 <ul class="dropdown-menu">
-<li class="nav-item"><a href="solar-panel-production-turnkey-line.html" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Solar Panel Production Turnkey Line</a>
+<li class="nav-item"><a href="solar-panel-production-turnkey-line.html" title="Solar Panel Production Turnkey Line" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Solar Panel Production Turnkey Line</a>
 <ul class="dropdown-menu">
 <li class="nav-item mr-0"><a href="#" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Turnkey Automation</a></li>
 <li class="nav-item mr-0"><a href="#" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Stringer</a></li>
@@ -119,7 +119,7 @@
 
 <li class="nav-item mr-0"><a href="#" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> PV Reliability turnkey Lab</a></li>
 <li class="nav-item mr-0"><a href="#" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Solar Cell Production Line</a></li>
-<li class="nav-item mr-0"><a href="raw-materials.html" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Raw materials</a>
+<li class="nav-item mr-0"><a href="raw-materials.html" title="Raw materials" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Raw materials</a>
 <ul class="dropdown-menu">
 <li class="nav-item mr-0"><a href="#" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i>  Aluminum Frames</a></li>
 <li class="nav-item mr-0"><a href="#" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Solar Cells</a></li>
@@ -129,9 +129,9 @@
 </ul>
 </li>
 
-<li class="nav-item mr-0"><a href="lithium-batteries-1.html" class="nav-link"> Lithium Batteries</a>
+<li class="nav-item mr-0"><a href="lithium-batteries-1.html" title="Lithium Batteries" class="nav-link"> Lithium Batteries</a>
 <ul class="dropdown-menu">
-<li class="nav-item mr-0"><a href="for-cylindrical-batteries.html" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> For Cylindrical Batteries</a>
+<li class="nav-item mr-0"><a href="for-cylindrical-batteries.html" title="For Cylindrical Batteries" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> For Cylindrical Batteries</a>
 <ul class="dropdown-menu">
 <li class="nav-item mr-0"><a href="#" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Turnkey Assembly Line </a></li>
 <li class="nav-item mr-0"><a href="#" title="Lithium Battery Pack Production Lines" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Cell Testers</a></li>
@@ -139,7 +139,7 @@
 <li class="nav-item mr-0"><a href="#" title="Lithium Battery Raw Material Components" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Welding Machines</a></li>
 </ul>
 </li>
-<li class="nav-item mr-0"><a href="for-prismatic-batteries.html" title="Lithium Cell Manufacturing" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> For Prismatic Batteries</a>
+<li class="nav-item mr-0"><a href="for-prismatic-batteries.html" title="For Prismatic Batteries" title="Lithium Cell Manufacturing" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> For Prismatic Batteries</a>
 <ul class="dropdown-menu">
 <li class="nav-item mr-0"><a href="#" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Turnkey Assembly Line </a></li>
 <li class="nav-item mr-0"><a href="#" title="Lithium Battery Pack Production Lines" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Cell Testers</a></li>
@@ -158,8 +158,8 @@
 
 <!--<li class="nav-item mr-0"><a href="#" class="nav-link">OEM Services</a>
 <ul class="dropdown-menu">
-<li class="nav-item mr-0"><a href="solar-panels.html" title="Solar Panels" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Solar Panels</a></li>
-<li class="nav-item mr-0"><a href="lithium-batteries.html" title="Lithium Batteries" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Lithium Batteries </a></li>
+<li class="nav-item mr-0"><a href="#" title="Solar Panels" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Solar Panels</a></li>
+<li class="nav-item mr-0"><a href="lithium-batteries-1.html" title="Lithium Batteries" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Lithium Batteries </a></li>
 <li class="nav-item mr-0"><a href="#" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> E-Charging stations</a></li>
 </ul>
 </li>-->
@@ -179,10 +179,10 @@
 <li><a href="index.html" title="Home">Home</a></li>
 <li><a href="about-us.html" title="About Us">About Us</a></li>
 
-<li><a href="solar.html" title="Business Units">Solar PV</a>
+<li><a href="solar.html" title="Solar PV" title="Business Units">Solar PV</a>
 <ul>
 <li>
-<a href="solar-panel-production-turnkey-line.html">Solar Panel Production Turnkey Line</a>
+<a href="solar-panel-production-turnkey-line.html" title="Solar Panel Production Turnkey Line">Solar Panel Production Turnkey Line</a>
 <ul>
 <li><a href="#">Turnkey Automation</a></li>
 <li><a href="#">Stringer</a></li>
@@ -198,7 +198,7 @@
 <a href="#">Solar Cell Production Line</a>
 </li>
 <li>
-<a href="raw-materials.html">Raw materials</a>
+<a href="raw-materials.html" title="Raw materials">Raw materials</a>
 <ul>
 <li><a href="#">Aluminum Frames</a></li>
 <li><a href="#">Solar Cells</a></li>
@@ -217,10 +217,10 @@
 
 
 
-<li><a href="lithium-batteries-1.html" title="Business Units">Lithium Batteries</a>
+<li><a href="lithium-batteries-1.html" title="Lithium Batteries" title="Business Units">Lithium Batteries</a>
 <ul>
 <li>
-<a href="for-cylindrical-batteries.html">For Cylindrical Batteries</a>
+<a href="for-cylindrical-batteries.html" title="For Cylindrical Batteries">For Cylindrical Batteries</a>
 <ul>
 <li><a href="#">Turnkey Assembly Line</a></li>
 <li><a href="#">Cell Testers</a></li>
@@ -230,7 +230,7 @@
 </li>
 <!-- Two -->
 <li>
-<a href="for-prismatic-batteries.html">For Prismatic Batteries</a>
+<a href="for-prismatic-batteries.html" title="For Prismatic Batteries">For Prismatic Batteries</a>
 <ul>
 <li><a href="#">Turnkey Assembly Line</a></li>
 <li><a href="#">Cell Testers</a></li>
@@ -2471,8 +2471,8 @@ style="background: url(img/unit-3.jpg)no-repeat; background-size: cover;">
   
     <h6><span class="font-italic font-weight-bold">Category Links</span></h6>
   <ul class="mt-2 d-block">
-  <li class="border-bottom"><a href="#" class="text-dark"><i class="fa fa-angle-right" aria-hidden="true"></i> Solar PV</a></li>
-  <li class="border-bottom"><a href="#" class="text-dark"><i class="fa fa-angle-right" aria-hidden="true"></i> Lithium Batteries</a></li>
+  <li class="border-bottom"><a href="solar.html" title="Solar PV" class="text-dark"><i class="fa fa-angle-right" aria-hidden="true"></i> Solar PV</a></li>
+  <li class="border-bottom"><a href="lithium-batteries-1.html" title="Lithium Batteries" class="text-dark"><i class="fa fa-angle-right" aria-hidden="true"></i> Lithium Batteries</a></li>
 
 
 
@@ -2496,8 +2496,8 @@ style="background: url(img/unit-3.jpg)no-repeat; background-size: cover;">
 
   <li class="border-bottom"><a href="#" class="text-dark"><i class="fa fa-angle-right" aria-hidden="true"></i> Lithium Battery Raw Material Components</a></li>
 
-  <li class="border-bottom"><a href="solar-panels.html" class="text-dark"><i class="fa fa-angle-right" aria-hidden="true"></i>  Solar Panels</a></li>
-  <li class="border-bottom"><a href="lithium-batteries.html" class="text-dark"><i class="fa fa-angle-right" aria-hidden="true"></i> Lithium Batteries </a></li>
+  <li class="border-bottom"><a href="#" class="text-dark"><i class="fa fa-angle-right" aria-hidden="true"></i>  Solar Panels</a></li>
+  <li class="border-bottom"><a href="lithium-batteries-1.html" title="Lithium Batteries" class="text-dark"><i class="fa fa-angle-right" aria-hidden="true"></i> Lithium Batteries </a></li>
   
   </ul>
   </div>
