--- a/lithium-batteries-1.html
+++ b/lithium-batteries-1.html
@@ -322,7 +322,7 @@
     <!-- Card 3 -->
     <div class="col-md-4 d-flex">
       <div class="card product-card flex-fill d-flex flex-column">
-        <img src="img/DEMO.png" class="card-img-top product-img" alt="Solar Cell">
+        <img src="img/bms-tester.png" title="BMS Testers in India" class="card-img-top product-img" alt="BMS Testers in India">
         <div class="card-body d-flex flex-column justify-content-between">
           <div>
             <h5 class="card-title">BMS Testers</h5>
@@ -343,7 +343,7 @@
     <!-- Card 1 -->
     <div class="col-md-4 d-flex">
       <div class="card product-card flex-fill d-flex flex-column">
-        <img src="img/DEMO.png" class="card-img-top product-img" alt="Solar Panel">
+        <img src="img/battery-pack-tester.png" class="card-img-top product-img" alt="Battery Pack Testers in India" title="Battery Pack Testers in India">
         <div class="card-body d-flex flex-column justify-content-between">
           <div>
             <h5 class="card-title">Battery Pack Testers</h5>
