--- a/lithium-batteries-1.html
+++ b/lithium-batteries-1.html
@@ -288,7 +288,7 @@
     <!-- Card 1 -->
     <div class="col-md-4 d-flex">
       <div class="card product-card flex-fill d-flex flex-column">
-        <img src="img/DEMO.png" class="card-img-top product-img" alt="Solar Panel">
+        <a href="for-cylindrical-batteries.html" title="For Cylindrical Batteries in India"><img src="img/for-cylindrical-batteries.png" class="card-img-top product-img" alt="For Cylindrical Batteries in India" title="For Cylindrical Batteries in India"></a>
         <div class="card-body d-flex flex-column justify-content-between">
           <div>
             <h5 class="card-title">For Cylindrical Batteries</h5>
@@ -305,7 +305,7 @@
     <!-- Card 2 -->
     <div class="col-md-4 d-flex">
       <div class="card product-card flex-fill d-flex flex-column">
-        <img src="img/DEMO.png" class="card-img-top product-img" alt="PV Lab">
+        <a href="for-prismatic-batteries.html" title="For Prismatic Batteries in India"><img src="img/for-prismatic-batteries.png" class="card-img-top product-img" alt="For Prismatic Batteries in India" title="For Prismatic Batteries in India"></a>
         <div class="card-body d-flex flex-column justify-content-between">
           <div>
             <h5 class="card-title">For Prismatic Batteries</h5>
@@ -322,7 +322,7 @@
     <!-- Card 3 -->
     <div class="col-md-4 d-flex">
       <div class="card product-card flex-fill d-flex flex-column">
-        <img src="img/bms-tester.png" title="BMS Testers in India" class="card-img-top product-img" alt="BMS Testers in India">
+        <a href="#" title="BMS Testers"><img src="img/bms-tester.png" title="BMS Testers in India" class="card-img-top product-img" alt="BMS Testers in India"></a>
         <div class="card-body d-flex flex-column justify-content-between">
           <div>
             <h5 class="card-title">BMS Testers</h5>
@@ -343,7 +343,7 @@
     <!-- Card 1 -->
     <div class="col-md-4 d-flex">
       <div class="card product-card flex-fill d-flex flex-column">
-        <img src="img/battery-pack-tester.png" class="card-img-top product-img" alt="Battery Pack Testers in India" title="Battery Pack Testers in India">
+        <a href="#" title="Battery Pack Tester in India"><img src="img/battery-pack-tester.png" class="card-img-top product-img" alt="Battery Pack Testers in India" title="Battery Pack Testers in India"></a>
         <div class="card-body d-flex flex-column justify-content-between">
           <div>
             <h5 class="card-title">Battery Pack Testers</h5>
@@ -360,7 +360,7 @@
     <!-- Card 2 -->
     <div class="col-md-4 d-flex">
       <div class="card product-card flex-fill d-flex flex-column">
-        <img src="img/DEMO.png" class="card-img-top product-img" alt="PV Lab">
+        <a href="#" title="Other Machines"><img src="img/DEMO.png" class="card-img-top product-img" alt="Other Machines in India" title="Other Machines in India"></a>
         <div class="card-body d-flex flex-column justify-content-between">
           <div>
             <h5 class="card-title">Other Machines</h5>
