--- a/lithium-batteries-1.html
+++ b/lithium-batteries-1.html
@@ -360,7 +360,7 @@
     <!-- Card 2 -->
     <div class="col-md-4 d-flex">
       <div class="card product-card flex-fill d-flex flex-column">
-        <a href="#" title="Other Machines"><img src="img/DEMO.png" class="card-img-top product-img" alt="Other Machines in India" title="Other Machines in India"></a>
+        <a href="#" title="Other Machines"><img src="img/other-machines.png" class="card-img-top product-img" alt="Other Machines in India" title="Other Machines in India"></a>
         <div class="card-body d-flex flex-column justify-content-between">
           <div>
             <h5 class="card-title">Other Machines</h5>
@@ -387,7 +387,7 @@
 <h6><span class="font-italic font-weight-bold">Quick Links</span></h6>
 
   <ul class="mt-2 d-block">
-  <li class="border-bottom"><a href="./"><i class="fa fa-angle-right" aria-hidden="true"></i> Home</a></li>
+  <li class="border-bottom"><a href="index.html"><i class="fa fa-angle-right" aria-hidden="true"></i> Home</a></li>
   <li class="border-bottom"><a href="about-us.html"><i class="fa fa-angle-right" aria-hidden="true"></i> About Us</a></li>
   <li class="border-bottom"><a href="career.html"><i class="fa fa-angle-right" aria-hidden="true"></i> Career  </a></li>
   <li class="border-bottom"><a href="#"><i class="fa fa-angle-right" aria-hidden="true"></i> News & Events  </a></li>
