--- a/solar.html
+++ b/solar.html
@@ -289,7 +289,7 @@
     <!-- Card 1 -->
     <div class="col-md-4 d-flex">
       <div class="card product-card flex-fill d-flex flex-column">
-        <img src="img/DEMO.png" class="card-img-top product-img" alt="Solar Panel">
+        <a href="solar-panel-production-turnkey-line.html" title="Solar Panel Production Turnkey Line in India"><img src="img/DEMO.png" class="card-img-top product-img" alt="Solar Panel Production Turnkey Line in India" title="Solar Panel Production Turnkey Line in India"></a>
         <div class="card-body d-flex flex-column justify-content-between">
           <div>
             <h5 class="card-title">Solar Panel Production Turnkey Line</h5>
@@ -306,7 +306,7 @@
     <!-- Card 2 -->
     <div class="col-md-4 d-flex">
       <div class="card product-card flex-fill d-flex flex-column">
-        <img src="img/DEMO.png" class="card-img-top product-img" alt="PV Lab">
+        <a href="#" title="PV Reliability Turnkey Lab in India"><img src="img/DEMO.png" class="card-img-top product-img" alt="PV Reliability Turnkey Lab in India" title="PV Reliability Turnkey Lab in India"></a>
         <div class="card-body d-flex flex-column justify-content-between">
           <div>
             <h5 class="card-title">PV Reliability Turnkey Lab</h5>
@@ -323,7 +323,7 @@
     <!-- Card 3 -->
     <div class="col-md-4 d-flex">
       <div class="card product-card flex-fill d-flex flex-column">
-        <img src="img/DEMO.png" class="card-img-top product-img" alt="Solar Cell">
+        <a href="#" title="Solar Cell Production Line in India"><img src="img/DEMO.png" class="card-img-top product-img" alt="Solar Cell Production Line in India" title="Solar Cell Production Line in India"></a>
         <div class="card-body d-flex flex-column justify-content-between">
           <div>
             <h5 class="card-title">Solar Cell Production Line</h5>
@@ -344,10 +344,10 @@
     <!-- Card 1 -->
     <div class="col-md-4 d-flex">
       <div class="card product-card flex-fill d-flex flex-column">
-        <img src="img/DEMO.png" class="card-img-top product-img" alt="Solar Panel">
+        <a href="raw-materials.html" title="Raw Materials"><img src="img/DEMO.png" class="card-img-top product-img" alt="Raw materials" title="Raw materials"></a>
         <div class="card-body d-flex flex-column justify-content-between">
           <div>
-            <h5 class="card-title">Raw materials</h5>
+            <h5 class="card-title">Raw Materials</h5>
             <p class="card-text text-muted">Turnkey supply of raw materials for energy projects.</p>
           </div>
           <div class="mt-3 d-flex justify-content-between">
@@ -388,7 +388,7 @@
 <h6><span class="font-italic font-weight-bold">Quick Links</span></h6>
 
   <ul class="mt-2 d-block">
-  <li class="border-bottom"><a href="./"><i class="fa fa-angle-right" aria-hidden="true"></i> Home</a></li>
+  <li class="border-bottom"><a href="index.html"><i class="fa fa-angle-right" aria-hidden="true"></i> Home</a></li>
   <li class="border-bottom"><a href="about-us.html"><i class="fa fa-angle-right" aria-hidden="true"></i> About Us</a></li>
   <li class="border-bottom"><a href="career.html"><i class="fa fa-angle-right" aria-hidden="true"></i> Career  </a></li>
   <li class="border-bottom"><a href="#"><i class="fa fa-angle-right" aria-hidden="true"></i> News & Events  </a></li>
