--- a/electric-charging-stations.html
+++ b/electric-charging-stations.html
@@ -409,7 +409,7 @@ related infrastructure. We are offering highly customized solutions for various 
 <span class="font-italic font-weight-bold">Quick Links</span>
 
   <ul class="mt-2 d-block">
-  <li class="border-bottom"><a href="./"><i class="fa fa-angle-right" aria-hidden="true"></i> Home</a></li>
+  <li class="border-bottom"><a href="index.html"><i class="fa fa-angle-right" aria-hidden="true"></i> Home</a></li>
   <li class="border-bottom"><a href="about-us.html"><i class="fa fa-angle-right" aria-hidden="true"></i> About Us</a></li>
   <li class="border-bottom"><a href="career.html"><i class="fa fa-angle-right" aria-hidden="true"></i> Career  </a></li>
   <li class="border-bottom"><a href="#"><i class="fa fa-angle-right" aria-hidden="true"></i> News & Events  </a></li>
