--- a/for-prismatic-batteries.html
+++ b/for-prismatic-batteries.html
@@ -291,7 +291,7 @@
     <!-- Card 1 -->
     <div class="col-md-4 d-flex">
       <div class="card product-card flex-fill d-flex flex-column">
-        <img src="img/DEMO.png" class="card-img-top product-img" alt="Solar Panel">
+        <a href="#" title="Turnkey Assembly Line for Prismatic Batteries in India"><img src="img/prismatic-assembley-line.png" class="card-img-top product-img" alt="Turnkey Assembly Line for Prismatic Batteries in India" title="Turnkey Assembly Line for Prismatic Batteries in India"></a>
         <div class="card-body d-flex flex-column justify-content-between">
           <div>
             <h5 class="card-title">Turnkey Assembly Line</h5>
@@ -308,7 +308,7 @@
     <!-- Card 2 -->
     <div class="col-md-4 d-flex">
       <div class="card product-card flex-fill d-flex flex-column">
-        <img src="img/DEMO.png" class="card-img-top product-img" alt="PV Lab">
+        <a href="#" title="Cell Testers for Prismatic Batteries in India"><img src="img/prismatic-cell-tester.png" class="card-img-top product-img" alt="Cell Testers for Prismatic Batteries in India" title="Cell Testers for Prismatic Batteries in India"></a>
         <div class="card-body d-flex flex-column justify-content-between">
           <div>
             <h5 class="card-title">Cell Testers</h5>
@@ -325,7 +325,7 @@
     <!-- Card 3 -->
     <div class="col-md-4 d-flex">
       <div class="card product-card flex-fill d-flex flex-column">
-        <img src="img/DEMO.png" class="card-img-top product-img" alt="Solar Cell">
+        <a href="#" title="Sorting Machine for Prismatic Batteries in India"><img src="img/prismatic-sorting-machine.png" class="card-img-top product-img" alt="Sorting Machine for Prismatic Batteries in India" title="Sorting Machine for Prismatic Batteries in India"></a>
         <div class="card-body d-flex flex-column justify-content-between">
           <div>
             <h5 class="card-title">Sorting Machine</h5>
@@ -346,7 +346,7 @@
     <!-- Card 1 -->
     <div class="col-md-4 d-flex">
       <div class="card product-card flex-fill d-flex flex-column">
-        <img src="img/DEMO.png" class="card-img-top product-img" alt="Solar Panel">
+       <a href="#" title="Welding Machines for Prismatic Batteries in India"><img src="img/prismatic-welding-machine.png" class="card-img-top product-img" alt="Welding Machines for Prismatic Batteries in India" title="Welding Machines for Prismatic Batteries in India"></a> 
         <div class="card-body d-flex flex-column justify-content-between">
           <div>
             <h5 class="card-title">Welding Machines</h5>
@@ -374,7 +374,7 @@
 <h6><span class="font-italic font-weight-bold">Quick Links</span></h6>
 
   <ul class="mt-2 d-block">
-  <li class="border-bottom"><a href="./"><i class="fa fa-angle-right" aria-hidden="true"></i> Home</a></li>
+  <li class="border-bottom"><a href="index.html"><i class="fa fa-angle-right" aria-hidden="true"></i> Home</a></li>
   <li class="border-bottom"><a href="about-us.html"><i class="fa fa-angle-right" aria-hidden="true"></i> About Us</a></li>
   <li class="border-bottom"><a href="career.html"><i class="fa fa-angle-right" aria-hidden="true"></i> Career  </a></li>
   <li class="border-bottom"><a href="#"><i class="fa fa-angle-right" aria-hidden="true"></i> News & Events  </a></li>
