--- a/lithium-cell-manufacturing.html
+++ b/lithium-cell-manufacturing.html
@@ -277,7 +277,7 @@ Various equipments included but not limited to as follows :</p>
 <span class="font-italic font-weight-bold">Quick Links</span>
 
   <ul class="mt-2 d-block">
-  <li class="border-bottom"><a href="./"><i class="fa fa-angle-right" aria-hidden="true"></i> Home</a></li>
+  <li class="border-bottom"><a href="index.html"><i class="fa fa-angle-right" aria-hidden="true"></i> Home</a></li>
   <li class="border-bottom"><a href="about-us.html"><i class="fa fa-angle-right" aria-hidden="true"></i> About Us</a></li>
   <li class="border-bottom"><a href="career.html"><i class="fa fa-angle-right" aria-hidden="true"></i> Career  </a></li>
   <li class="border-bottom"><a href="#"><i class="fa fa-angle-right" aria-hidden="true"></i> News & Events  </a></li>
