--- a/solar.html
+++ b/solar.html
@@ -289,7 +289,7 @@
     <!-- Card 1 -->
     <div class="col-md-4 d-flex">
       <div class="card product-card flex-fill d-flex flex-column">
-        <a href="solar-panel-production-turnkey-line.html" title="Solar Panel Production Turnkey Line in India"><img src="img/DEMO.png" class="card-img-top product-img" alt="Solar Panel Production Turnkey Line in India" title="Solar Panel Production Turnkey Line in India"></a>
+        <a href="solar-panel-production-turnkey-line.html" title="Solar Panel Production Turnkey Line in India"><img src="img/solar-panel-production-turnkey-line.png" class="card-img-top product-img" alt="Solar Panel Production Turnkey Line in India" title="Solar Panel Production Turnkey Line in India"></a>
         <div class="card-body d-flex flex-column justify-content-between">
           <div>
             <h5 class="card-title">Solar Panel Production Turnkey Line</h5>
