--- a/solar.html
+++ b/solar.html
@@ -344,7 +344,7 @@
     <!-- Card 1 -->
     <div class="col-md-4 d-flex">
       <div class="card product-card flex-fill d-flex flex-column">
-        <a href="raw-materials.html" title="Raw Materials"><img src="img/DEMO.png" class="card-img-top product-img" alt="Raw materials" title="Raw materials"></a>
+        <a href="raw-materials.html" title="Raw Materials in India"><img src="img/DEMO.png" class="card-img-top product-img" alt="Raw materials" title="Raw materials in India"></a>
         <div class="card-body d-flex flex-column justify-content-between">
           <div>
             <h5 class="card-title">Raw Materials</h5>
@@ -361,7 +361,7 @@
     <!-- Card 2 -->
     <div class="col-md-4 d-flex">
       <div class="card product-card flex-fill d-flex flex-column">
-        <img src="img/DEMO.png" class="card-img-top product-img" alt="PV Lab">
+       <a href="#" title="Solar EPC Components in India"><img src="img/DEMO.png" class="card-img-top product-img" alt="Solar EPC components in India" title="Solar EPC components in India"></a>
         <div class="card-body d-flex flex-column justify-content-between">
           <div>
             <h5 class="card-title">Solar EPC components</h5>
