--- a/solar.html
+++ b/solar.html
@@ -306,7 +306,7 @@
     <!-- Card 2 -->
     <div class="col-md-4 d-flex">
       <div class="card product-card flex-fill d-flex flex-column">
-        <a href="#" title="PV Reliability Turnkey Lab in India"><img src="img/DEMO.png" class="card-img-top product-img" alt="PV Reliability Turnkey Lab in India" title="PV Reliability Turnkey Lab in India"></a>
+        <a href="#" title="PV Reliability Turnkey Lab in India"><img src="img/pv-reliability-turnkey-lab.png" class="card-img-top product-img" alt="PV Reliability Turnkey Lab in India" title="PV Reliability Turnkey Lab in India"></a>
         <div class="card-body d-flex flex-column justify-content-between">
           <div>
             <h5 class="card-title">PV Reliability Turnkey Lab</h5>
@@ -361,7 +361,7 @@
     <!-- Card 2 -->
     <div class="col-md-4 d-flex">
       <div class="card product-card flex-fill d-flex flex-column">
-       <a href="#" title="Solar EPC Components in India"><img src="img/DEMO.png" class="card-img-top product-img" alt="Solar EPC components in India" title="Solar EPC components in India"></a>
+       <a href="#" title="Solar EPC Components in India"><img src="img/solar-epc-components.png" class="card-img-top product-img" alt="Solar EPC components in India" title="Solar EPC components in India"></a>
         <div class="card-body d-flex flex-column justify-content-between">
           <div>
             <h5 class="card-title">Solar EPC components</h5>
