--- a/raw-materials.html
+++ b/raw-materials.html
@@ -291,7 +291,7 @@
     <!-- Card 1 -->
     <div class="col-md-4 d-flex">
       <div class="card product-card flex-fill d-flex flex-column">
-        <img src="img/DEMO.png" class="card-img-top product-img" alt="Solar Panel">
+        <a href="#" title="Aluminum Frames in India"><img src="img/aluminum-frames.png" class="card-img-top product-img" alt="Aluminum Frames in India" title="Aluminum Frames in India"></a>
         <div class="card-body d-flex flex-column justify-content-between">
           <div>
             <h5 class="card-title"> Aluminum Frames</h5>
@@ -308,7 +308,7 @@
     <!-- Card 2 -->
     <div class="col-md-4 d-flex">
       <div class="card product-card flex-fill d-flex flex-column">
-        <img src="img/DEMO.png" class="card-img-top product-img" alt="PV Lab">
+        <a href="#" title="Solar Cells in India"><img src="img/solar-cells.png" class="card-img-top product-img" alt="Solar Cells in India" title="Solar Cells in India"></a>
         <div class="card-body d-flex flex-column justify-content-between">
           <div>
             <h5 class="card-title">Solar Cells</h5>
