--- a/solar.html
+++ b/solar.html
@@ -344,7 +344,7 @@
     <!-- Card 1 -->
     <div class="col-md-4 d-flex">
       <div class="card product-card flex-fill d-flex flex-column">
-        <a href="raw-materials.html" title="Raw Materials in India"><img src="img/DEMO.png" class="card-img-top product-img" alt="Raw materials" title="Raw materials in India"></a>
+        <a href="raw-materials.html" title="Raw Materials in India"><img src="img/raw-materials.png" class="card-img-top product-img" alt="Raw materials" title="Raw materials in India"></a>
         <div class="card-body d-flex flex-column justify-content-between">
           <div>
             <h5 class="card-title">Raw Materials</h5>
