--- a/about-us.html
+++ b/about-us.html
@@ -280,7 +280,7 @@
 <!-- About Us -->
  <div class="head-main pt-5">
     <div class="container head-main-inner">
-        <h2 class="header-tag">About INDYGREEN TECHNOLOGIES</h2>
+        <h2 class="header-tag text-light">About INDYGREEN TECHNOLOGIES</h2>
     </div>
  </div>
 <section class="about-us py-5">
