--- a/solar-panel-production-turnkey-line.html
+++ b/solar-panel-production-turnkey-line.html
@@ -291,7 +291,7 @@
     <!-- Card 1 -->
     <div class="col-md-4 d-flex">
       <div class="card product-card flex-fill d-flex flex-column">
-        <img src="img/DEMO.png" class="card-img-top product-img" alt="Solar Panel">
+        <a href="#" title="Turnkey Automation in India"><img src="img/turnkey-automation.png" class="card-img-top product-img" alt="Turnkey Automation in India" title="Turnkey Automation in India"></a>
         <div class="card-body d-flex flex-column justify-content-between">
           <div>
             <h5 class="card-title">Turnkey Automation</h5>
@@ -308,7 +308,7 @@
     <!-- Card 2 -->
     <div class="col-md-4 d-flex">
       <div class="card product-card flex-fill d-flex flex-column">
-        <img src="img/DEMO.png" class="card-img-top product-img" alt="PV Lab">
+        <a href="#" title="Stringer in India"><img src="img/stinger.png" class="card-img-top product-img" alt="Stringer in India" title="Stringer in India"></a>
         <div class="card-body d-flex flex-column justify-content-between">
           <div>
             <h5 class="card-title">Stringer</h5>
@@ -325,7 +325,7 @@
     <!-- Card 3 -->
     <div class="col-md-4 d-flex">
       <div class="card product-card flex-fill d-flex flex-column">
-        <img src="img/DEMO.png" class="card-img-top product-img" alt="Solar Cell">
+        <a href="#" title="Laminator in India"><img src="img/laminator.png" class="card-img-top product-img" alt="Laminator in India" title="Laminator in India"></a>
         <div class="card-body d-flex flex-column justify-content-between">
           <div>
             <h5 class="card-title">Laminator</h5>
@@ -346,7 +346,7 @@
     <!-- Card 1 -->
     <div class="col-md-4 d-flex">
       <div class="card product-card flex-fill d-flex flex-column">
-        <img src="img/DEMO.png" class="card-img-top product-img" alt="Solar Panel">
+        <a href="#" title="Sun Simulator in India"><img src="img/sun-simulator.png" class="card-img-top product-img" alt="Sun Simulator in India" title="Sun Simulator in India"></a>
         <div class="card-body d-flex flex-column justify-content-between">
           <div>
             <h5 class="card-title">Sun Simulator</h5>
