--- a/lb.html
+++ b/lb.html
@@ -68,6 +68,7 @@
 <div class="col-xl-9 col-lg-9 col-md-9 col-sm-12 col-xs-12 nave_side align-self-center">
 <div class="navbar-area">
 <div class="fennec-nav">
+	
 <nav class="navbar navbar-expand-md navbar-light float-right text-right p-0">    
 <div class="collapse navbar-collapse mean-menu" id="navbarSupportedContent" style="display: block;">
 <ul class="navbar-nav">
@@ -208,7 +209,6 @@
 </div>
 </nav>
 
-
 </div>
 </div>
 </div>
@@ -216,20 +216,22 @@
 </div>
 </section>
 <!-- ttm-page-title-row -->
-<section class="ttm-page-title-row">
+<section class="ttm-page-title-row" style="background: url(img/consulting-services.png)no-repeat; background-attachment: fixed; background-position: 50% 15%;">
 <div class="container">
 <div class="row">
 <div class="col-md-12"> 
 <div class="title-box ttm-textcolor-white">
 <div class="page-title-heading">
-<h1 class="title text-white">Sitemap</h1>
+<h1 class="title text-white">Lithium Batteries</h1>
 </div><!-- /.page-title-captions -->
 <div class="breadcrumb-wrapper">
 <span>
 <a title="Homepage" href="index.html" class="text-white"><i class="ti ti-home"></i>Home</a>
 </span>
 <span class="ttm-bread-sep text-white">/</span>
-<span class="text-white">Sitemap</span>
+<span class="ttm-bread-sep text-white">OEM Services   </span>
+<span class="ttm-bread-sep text-white">/</span>
+<span class="text-white">Lithium Batteries</span>
 </div>  
 </div>
 </div><!-- /.col-md-12 -->  
@@ -237,130 +239,18 @@
 </div><!-- /.container -->                      
 </section>
 
-<section class="sitemap-link py-5">
+<!-- Solar Panel -->
+<section class="solar-panel bg-light py-3">
 <div class="container">
 <div class="row">
-<div class="col-xl-8 col-lg-8 col-md-8 col-sm-12 col-xs-12 sitema-links-item">
-<h2 class="d-block mb-3">Navigation Links</h2>
-<div class="row">
-<div class="col-xl-3 col-lg-3 col-md-4 col-sm-4 col-xs-12 small-link text-center mb-2">
-<div class="color-site rounded py-2">
-<a href="#" class="text-white ">Home</a></div>
-
+<div class="col-xl-4 col-lg-4 col-md-4 col-sm-12 col-xs-12 solar-content">
+<img src="img/lithium-batteries.jpg" alt="" title="" class="w-100">
 </div>
 
-<div class="col-xl-3 col-lg-3 col-md-4 col-sm-4  col-xs-12 small-link text-center mb-2">
-<div class="color-site rounded py-2">
-<a href="#" class="text-white">Company Profile</a>
-</div>
-</div>
-
-<div class="col-xl-3 col-lg-3 col-md-4 col-sm-4  col-xs-12 small-link text-center mb-2">
-<div class="color-site rounded py-2">
-<a href="#" class="text-white">Our Products</a>
-</div>
-</div>
-
-<div class="col-xl-3 col-lg-3 col-md-4 col-sm-4  col-xs-12 small-link text-center mb-2">
-<div class="color-site rounded py-2">
-<a href="#" class="text-white">Gallery</a>
-</div>
-</div>
-
-
-<div class="col-xl-3 col-lg-3 col-md-4 col-sm-4  col-xs-12 small-link text-center mb-2">
-<div class="color-site rounded py-2">
-<a href="#" class="text-white">Sitemap</a>
-</div>
-</div>
-
-<div class="col-xl-3 col-lg-3 col-md-4 col-sm-4  col-xs-12 small-link text-center mb-2">
-<div class="color-site rounded py-2">
-<a href="#" class="text-white">Contact Us</a>
-</div>
-</div>
-</div>
-<!-- parent-divison -->
-<div class="parent-divison mt-3">
-<h3 class="d-block mb-3">Business Units</h3>
-<div class="row">
-<div class="col-xl-4 col-lg-4 col-md-4 col-sm-4 col-xs-12 small-link text-center mb-2">
-<div class="color-site skin-color rounded py-2">
-<a href="#" class="text-white "> Solar PV</a></div>
+<div class="col-xl-8 col-lg-8 col-md-8 col-sm-12 col-xs-12 solar-content align-self-center">
+<span>OEM Lithium Battery Solutions for different applications with quality matrials in shortest possible time & best price:</span>
 
 </div>
-
-<div class="col-xl-4 col-lg-4 col-md-4 col-sm-4  col-xs-12 small-link text-center mb-2">
-<div class="color-site skin-color rounded py-2">
-<a href="#" class="text-white"> E-Mobility </a>
-</div>
-</div>
-
-<div class="col-xl-4 col-lg-4 col-md-4 col-sm-4  col-xs-12 small-link text-center mb-2">
-<div class="color-site skin-color rounded py-2">
-<a href="#" class="text-white"> Hydrogen Mobility </a>
-</div>
-</div>
-</div>
-
-</div>
-
-<div class="parent-divison mt-3">
-<h4 class="d-block mb-3">Consulting Services  </h4>
-<div class="row">
-<div class="col-xl-4 col-lg-4 col-md-6 col-sm-6 col-xs-12 small-link text-center mb-2">
-<div class="color-site black-color rounded py-2">
-<a href="#" class="text-white "> Solar PV Manufacturing</a></div>
-
-</div>
-
-<div class="col-xl-4 col-lg-4 col-md-6 col-sm-6  col-xs-12 small-link text-center mb-2">
-<div class="color-site black-color rounded py-2">
-<a href="#" class="text-white"> Lithium Cell Manufacturing</a>
-</div>
-</div>
-
-<div class="col-xl-4 col-lg-4 col-md-6 col-sm-6  col-xs-12 small-link text-center mb-2">
-<div class="color-site black-color rounded py-2">
-<a href="#" class="text-white"> Lithium Battery Packs Manufacturing</a>
-</div>
-</div>
-</div>
-</div>
-</div>
-
-<div class="col-lg-4">
-<div class="product-contact" id="contactus-form">
-<p class="h2-tile text-center"> Get a Quote </p>
-<form method="post">
-<div id="successmsg"></div>
-<input type="hidden" name="enquiry_for" value="Enquiry">
-<input type="hidden" name="page_url" value="">
-<div class="form-group">
-<i class="fa fa-user"></i>
-<input type="text" name="name" class="form-control" placeholder="Your Name*" required="">
-</div>
-<div class="form-group">
-<i class="fa fa-envelope"></i>
-<input type="email" class="form-control" name="email" placeholder="Your Email Address*" required="">
-</div>
-<div class="form-group">
-<i class="fa fa-phone" aria-hidden="true"></i>
-<input type="text" name="mobile" class="form-control" onkeypress="return event.charCode >= 48 &amp &amp; event.charCode <= 57 || event.charCode == 43 || event.charCode == 45 || event.charCode == 0" minlength="10" maxlength="15" placeholder="Your Phone Number*" required="">
-</div>
-<div class="form-group">
-<i class="fa fa-map-marker" aria-hidden="true"></i>
-<input type="text" name="address" class="form-control" placeholder="Address">
-</div>
-<div class="form-group">
-<i class="fa fa-comments" aria-hidden="true"></i>
-<textarea class="form-control" name="message" rows="3" placeholder="Message Here"></textarea>
-</div>
-<button type="submit" class="btn  text-white text-uppercase font-weight-bold w-100 d-block">Submit</button>
-</form>
-</div>
-</div>
-
 
 </div>
 </div>
@@ -516,6 +406,7 @@
 
 </main>
 <!-- script -->
+<script type="text/javascript" src="js/jquery.min.js"></script>
 <script type="text/javascript" src="js/jquery.min.js"></script>
 <script type="text/javascript" src="js/bootstrap.min.js"></script>
 <script type="text/javascript" src="js/slick.js"></script>
