--- a/contact-us.html
+++ b/contact-us.html
@@ -2,13 +2,13 @@
 <html lang="en">
 <head>
   <!-- Title -->
-  <title>About Indygreen Technologies - Solar, Lithium Battery & Hydrogen Solutions</title>
+    <title>Contact Indygreen Technologies - Solar, Lithium Battery & Hydrogen Solutions</title>
 
   <!-- Meta Description -->
-  <meta name="description" content="Learn about Indygreen Technologies, a global renewable energy company with 15+ years of expertise in solar, lithium batteries, EV mobility, and hydrogen production. We deliver turnkey solutions and sustainable manufacturing for industries worldwide." />
+  <meta name="description" content="Get in touch with Indygreen Technologies for turnkey solar PV production lines, lithium battery pack manufacturing, EV mobility, and hydrogen energy solutions. Contact us today to discuss your renewable energy project." />
 
   <!-- Meta Keywords -->
-  <meta name="keywords" content="About Indygreen Technologies, renewable energy company, solar energy factory setup, lithium battery production lines, EV mobility solutions, hydrogen production facilities, turnkey renewable energy solutions, green technologies India, global energy consulting, Inderjit Singh, Harleen Kaur" />
+  <meta name="keywords" content="Contact Indygreen Technologies, renewable energy contact, solar PV solutions India, lithium battery production contact, hydrogen energy solutions, EV mobility projects, turnkey renewable energy company India, Indygreentech contact details" />
 
   <!-- Robots -->
   <meta name="robots" content="index, follow" />
@@ -18,19 +18,19 @@
   <meta name="publisher" content="Indygreen Technologies Pvt. Ltd." />
 
   <!-- Open Graph (Social Sharing) -->
-  <meta property="og:title" content="About Indygreen Technologies - Renewable Energy Experts" />
-  <meta property="og:description" content="Indygreen Technologies is a forward-looking renewable energy company offering solar, lithium battery, EV, and hydrogen solutions with 15+ years of expertise." />
-  <meta property="og:url" content="https://www.indygreentech.com/about" />
+  <meta property="og:title" content="Contact Indygreen Technologies - Renewable Energy Experts" />
+  <meta property="og:description" content="Reach out to Indygreen Technologies for inquiries on solar, lithium battery, EV mobility, and hydrogen production turnkey solutions." />
+  <meta property="og:url" content="https://www.indygreentech.com/contact-us.html" />
   <meta property="og:type" content="website" />
   <meta property="og:site_name" content="Indygreen Technologies" />
 
   <!-- Twitter Card -->
   <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:title" content="About Indygreen Technologies - Renewable Energy Experts" />
-  <meta name="twitter:description" content="Global renewable energy company delivering turnkey solar, EV, lithium battery & hydrogen solutions across Asia, Africa & the Middle East." />
+  <meta name="twitter:title" content="Contact Indygreen Technologies - Renewable Energy Experts" />
+  <meta name="twitter:description" content="Contact us for solar PV, lithium battery, EV mobility, and hydrogen turnkey project solutions in India & worldwide." />
 
   <!-- Canonical -->
-  <link rel="canonical" href="https://www.indygreentech.com/about" />
+  <link rel="canonical" href="https://www.indygreentech.com/contact-us.html" />
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <link rel="stylesheet" href="css/bootstrap.min.css">
@@ -101,7 +101,7 @@
 <ul class="navbar-nav">
 <li class="nav-item mr-0"><a href="index.html" title="Home" class="nav-link active">Home </a></li>
 <li class="nav-item mr-0"><a href="about-us.html" title="About Us" class="nav-link">About Us</a></li>
-<li class="nav-item mr-0"><a href="solar.html" title="Solar PV" class="nav-link">Solar PV</a>
+<li class="nav-item mr-0"><a href="solar-pv.html" title="Solar PV" class="nav-link">Solar PV</a>
 <ul class="dropdown-menu">
 <li class="nav-item"><a href="solar-panel-production-turnkey-line.html" title="Solar Panel Production Turnkey Line" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Solar Panel Production Turnkey Line</a>
 <ul class="dropdown-menu">
@@ -124,7 +124,7 @@
 </ul>
 </li>
 
-<li class="nav-item mr-0"><a href="lithium-batteries-1.html" title="Lithium Batteries" class="nav-link"> Lithium Batteries</a>
+<li class="nav-item mr-0"><a href="lithium-batteries.html" title="Lithium Batteries" class="nav-link"> Lithium Batteries</a>
 <ul class="dropdown-menu">
 <li class="nav-item mr-0"><a href="for-cylindrical-batteries.html" title="For Cylindrical Batteries" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> For Cylindrical Batteries</a>
 <ul class="dropdown-menu">
@@ -154,7 +154,7 @@
 <!--<li class="nav-item mr-0"><a href="#" class="nav-link">OEM Services   </a>
 <ul class="dropdown-menu">
 <li class="nav-item mr-0"><a href="#" title="Solar Panels" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Solar Panels</a></li>
-<li class="nav-item mr-0"><a href="lithium-batteries-1.html" title="Lithium Batteries" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Lithium Batteries </a></li>
+<li class="nav-item mr-0"><a href="lithium-batteries.html" title="Lithium Batteries" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Lithium Batteries </a></li>
 <li class="nav-item mr-0"><a href="#" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> E-Charging stations</a></li>
 </ul>
 </li>-->
@@ -174,7 +174,7 @@
 <li><a href="index.html" title="Home">Home</a></li>
 <li><a href="about-us.html" title="About Us">About Us</a></li>
 
-<li><a href="solar.html" title="Solar PV" title="Business Units">Solar PV</a>
+<li><a href="solar-pv.html" title="Solar PV" title="Business Units">Solar PV</a>
 <ul>
 <li>
 <a href="solar-panel-production-turnkey-line.html" title="Solar Panel Production Turnkey Line">Solar Panel Production Turnkey Line</a>
@@ -212,7 +212,7 @@
 
 
 
-<li><a href="lithium-batteries-1.html" title="Lithium Batteries" title="Business Units">Lithium Batteries</a>
+<li><a href="lithium-batteries.html" title="Lithium Batteries" title="Business Units">Lithium Batteries</a>
 <ul>
 <li>
 <a href="for-cylindrical-batteries.html" title="For Cylindrical Batteries">For Cylindrical Batteries</a>
@@ -465,8 +465,8 @@
   
     <h6><span class="font-italic font-weight-bold">Category Links</span></h6>
   <ul class="mt-2 d-block">
-  <li class="border-bottom"><a href="solar.html" title="Solar PV" class="text-dark"><i class="fa fa-angle-right" aria-hidden="true"></i> Solar PV</a></li>
-  <li class="border-bottom"><a href="lithium-batteries-1.html" title="Lithium Batteries" class="text-dark"><i class="fa fa-angle-right" aria-hidden="true"></i> Lithium Batteries</a></li>
+  <li class="border-bottom"><a href="solar-pv.html" title="Solar PV" class="text-dark"><i class="fa fa-angle-right" aria-hidden="true"></i> Solar PV</a></li>
+  <li class="border-bottom"><a href="lithium-batteries.html" title="Lithium Batteries" class="text-dark"><i class="fa fa-angle-right" aria-hidden="true"></i> Lithium Batteries</a></li>
 
 
 
@@ -491,7 +491,7 @@
   <li class="border-bottom"><a href="#" class="text-dark"><i class="fa fa-angle-right" aria-hidden="true"></i> Lithium Battery Raw Material Components</a></li>
 
   <li class="border-bottom"><a href="#" class="text-dark"><i class="fa fa-angle-right" aria-hidden="true"></i>  Solar Panels</a></li>
-  <li class="border-bottom"><a href="lithium-batteries-1.html" title="Lithium Batteries" class="text-dark"><i class="fa fa-angle-right" aria-hidden="true"></i> Lithium Batteries </a></li>
+  <li class="border-bottom"><a href="lithium-batteries.html" title="Lithium Batteries" class="text-dark"><i class="fa fa-angle-right" aria-hidden="true"></i> Lithium Batteries </a></li>
   
   </ul>
   </div>
