--- a/for-cylindrical-batteries.html
+++ b/for-cylindrical-batteries.html
@@ -1,14 +1,13 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <!-- Title -->
-  <title>About Indygreen Technologies - Solar, Lithium Battery & Hydrogen Solutions</title>
+  <title>Cylindrical Battery Production Line | Assembly, Welding, Testing & Sorting - Indygreen Technologies</title>
 
   <!-- Meta Description -->
-  <meta name="description" content="Learn about Indygreen Technologies, a global renewable energy company with 15+ years of expertise in solar, lithium batteries, EV mobility, and hydrogen production. We deliver turnkey solutions and sustainable manufacturing for industries worldwide." />
+  <meta name="description" content="Indygreen Technologies delivers turnkey cylindrical battery production solutions including assembly lines, welding machines, advanced cell testers, and automated sorting machines for high-quality lithium battery manufacturing." />
 
   <!-- Meta Keywords -->
-  <meta name="keywords" content="About Indygreen Technologies, renewable energy company, solar energy factory setup, lithium battery production lines, EV mobility solutions, hydrogen production facilities, turnkey renewable energy solutions, green technologies India, global energy consulting, Inderjit Singh, Harleen Kaur" />
+  <meta name="keywords" content="cylindrical battery production line, lithium battery assembly line, cylindrical battery welding machines, cylindrical cell testers, cylindrical battery sorting machine, battery pack manufacturing equipment, cylindrical cell production turnkey, lithium-ion battery machinery, cylindrical battery solutions" />
 
   <!-- Robots -->
   <meta name="robots" content="index, follow" />
@@ -17,20 +16,20 @@
   <meta name="author" content="Indygreen Technologies" />
   <meta name="publisher" content="Indygreen Technologies Pvt. Ltd." />
 
-  <!-- Open Graph (Social Sharing) -->
-  <meta property="og:title" content="About Indygreen Technologies - Renewable Energy Experts" />
-  <meta property="og:description" content="Indygreen Technologies is a forward-looking renewable energy company offering solar, lithium battery, EV, and hydrogen solutions with 15+ years of expertise." />
-  <meta property="og:url" content="https://www.indygreentech.com/about" />
+  <!-- Open Graph -->
+  <meta property="og:title" content="Cylindrical Battery Production Line | Assembly, Welding, Testing & Sorting" />
+  <meta property="og:description" content="Turnkey cylindrical battery production line by Indygreen Technologies – including assembly lines, welding machines, precise cell testers, and automated sorting machines." />
+  <meta property="og:url" content="https://www.indygreentech.com/for-cylindrical-batteries.html" />
   <meta property="og:type" content="website" />
   <meta property="og:site_name" content="Indygreen Technologies" />
 
   <!-- Twitter Card -->
   <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:title" content="About Indygreen Technologies - Renewable Energy Experts" />
-  <meta name="twitter:description" content="Global renewable energy company delivering turnkey solar, EV, lithium battery & hydrogen solutions across Asia, Africa & the Middle East." />
+  <meta name="twitter:title" content="Cylindrical Battery Production Line | Assembly, Welding, Testing & Sorting" />
+  <meta name="twitter:description" content="End-to-end cylindrical battery turnkey production line solutions – assembly, welding, testing & sorting for lithium batteries." />
 
   <!-- Canonical -->
-  <link rel="canonical" href="https://www.indygreentech.com/about" />
+  <link rel="canonical" href="https://www.indygreentech.com/for-cylindrical-batteries.html" />
    <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <!-- Font Awesome for icons -->
@@ -105,7 +104,7 @@
 <ul class="navbar-nav">
 <li class="nav-item mr-0"><a href="index.html" title="Home" class="nav-link active">Home </a></li>
 <li class="nav-item mr-0"><a href="about-us.html" title="About Us" class="nav-link">About Us</a></li>
-<li class="nav-item mr-0"><a href="solar.html" title="Solar PV" class="nav-link">Solar PV</a>
+<li class="nav-item mr-0"><a href="solar-pv.html" title="Solar PV" class="nav-link">Solar PV</a>
 <ul class="dropdown-menu">
 <li class="nav-item"><a href="solar-panel-production-turnkey-line.html" title="Solar Panel Production Turnkey Line" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Solar Panel Production Turnkey Line</a>
 <ul class="dropdown-menu">
@@ -128,7 +127,7 @@
 </ul>
 </li>
 
-<li class="nav-item mr-0"><a href="lithium-batteries-1.html" title="Lithium Batteries" class="nav-link"> Lithium Batteries</a>
+<li class="nav-item mr-0"><a href="lithium-batteries.html" title="Lithium Batteries" class="nav-link"> Lithium Batteries</a>
 <ul class="dropdown-menu">
 <li class="nav-item mr-0"><a href="for-cylindrical-batteries.html" title="For Cylindrical Batteries" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> For Cylindrical Batteries</a>
 <ul class="dropdown-menu">
@@ -158,7 +157,7 @@
 <!--<li class="nav-item mr-0"><a href="#" class="nav-link">OEM Services   </a>
 <ul class="dropdown-menu">
 <li class="nav-item mr-0"><a href="#" title="Solar Panels" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Solar Panels</a></li>
-<li class="nav-item mr-0"><a href="lithium-batteries-1.html" title="Lithium Batteries" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Lithium Batteries </a></li>
+<li class="nav-item mr-0"><a href="lithium-batteries.html" title="Lithium Batteries" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Lithium Batteries </a></li>
 <li class="nav-item mr-0"><a href="#" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> E-Charging stations</a></li>
 </ul>
 </li>-->
@@ -178,7 +177,7 @@
 <li><a href="index.html" title="Home">Home</a></li>
 <li><a href="about-us.html" title="About Us">About Us</a></li>
 
-<li><a href="solar.html" title="Solar PV" title="Business Units">Solar PV</a>
+<li><a href="solar-pv.html" title="Solar PV" title="Business Units">Solar PV</a>
 <ul>
 <li>
 <a href="solar-panel-production-turnkey-line.html" title="Solar Panel Production Turnkey Line">Solar Panel Production Turnkey Line</a>
@@ -216,7 +215,7 @@
 
 
 
-<li><a href="lithium-batteries-1.html" title="Lithium Batteries" title="Business Units">Lithium Batteries</a>
+<li><a href="lithium-batteries.html" title="Lithium Batteries" title="Business Units">Lithium Batteries</a>
 <ul>
 <li>
 <a href="for-cylindrical-batteries.html" title="For Cylindrical Batteries">For Cylindrical Batteries</a>
@@ -274,7 +273,7 @@
 <a title="Homepage" href="index.html" class="text-white"><i class="ti ti-home"></i>Home</a>
 </span>
 <span class="ttm-bread-sep text-white">/</span>
-<a title="Homepage" href="lithium-batteries-1.html" title="Lithium Batteries" class="text-white"><i class="ti ti-home"></i>Lithium Batteries</a>
+<a title="Homepage" href="lithium-batteries.html" title="Lithium Batteries" class="text-white"><i class="ti ti-home"></i>Lithium Batteries</a>
 </span>
 <span class="ttm-bread-sep text-white">/</span>
 <span class="text-white">For Cylindrical Batteries</span>
@@ -390,8 +389,8 @@
   
     <h6><span class="font-italic font-weight-bold">Category Links</span></h6>
   <ul class="mt-2 d-block">
-  <li class="border-bottom"><a href="solar.html" title="Solar PV" class="text-dark"><i class="fa fa-angle-right" aria-hidden="true"></i> Solar PV</a></li>
-  <li class="border-bottom"><a href="lithium-batteries-1.html" title="Lithium Batteries" class="text-dark"><i class="fa fa-angle-right" aria-hidden="true"></i> Lithium Batteries</a></li>
+  <li class="border-bottom"><a href="solar-pv.html" title="Solar PV" class="text-dark"><i class="fa fa-angle-right" aria-hidden="true"></i> Solar PV</a></li>
+  <li class="border-bottom"><a href="lithium-batteries.html" title="Lithium Batteries" class="text-dark"><i class="fa fa-angle-right" aria-hidden="true"></i> Lithium Batteries</a></li>
 
 
 
@@ -416,7 +415,7 @@
   <li class="border-bottom"><a href="#" class="text-dark"><i class="fa fa-angle-right" aria-hidden="true"></i> Lithium Battery Raw Material Components</a></li>
 
   <li class="border-bottom"><a href="#" class="text-dark"><i class="fa fa-angle-right" aria-hidden="true"></i>  Solar Panels</a></li>
-  <li class="border-bottom"><a href="lithium-batteries-1.html" title="Lithium Batteries" class="text-dark"><i class="fa fa-angle-right" aria-hidden="true"></i> Lithium Batteries </a></li>
+  <li class="border-bottom"><a href="lithium-batteries.html" title="Lithium Batteries" class="text-dark"><i class="fa fa-angle-right" aria-hidden="true"></i> Lithium Batteries </a></li>
   
   </ul>
   </div>
