--- a/lithium-battery-packs-manufacturing.html
+++ b/lithium-battery-packs-manufacturing.html
@@ -118,7 +118,7 @@
 <li class="nav-item mr-0"><a href="#" class="nav-link">OEM Services   </a>
 <ul class="dropdown-menu">
 <li class="nav-item mr-0"><a href="#" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Solar Panels</a></li>
-<li class="nav-item mr-0"><a href="lithium-batteries-1.html" title="Lithium Batteries" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Lithium Batteries </a></li>
+<li class="nav-item mr-0"><a href="lithium-batteries.html" title="Lithium Batteries" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Lithium Batteries </a></li>
 <li class="nav-item mr-0"><a href="#" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> E-Charging stations</a></li>
 </ul>
 </li>
@@ -193,7 +193,7 @@
 <ul>
 <li><a href="#" title="">  Solar Panels</a></li>
 <!-- Two -->
-<li><a href="lithium-batteries-1.html" title="Lithium Batteries" title=""> Lithium Batteries</a></li>
+<li><a href="lithium-batteries.html" title="Lithium Batteries" title=""> Lithium Batteries</a></li>
 <!-- Three -->
 <li><a href="#" title=""> E-Charging stations</a></li>
 <li>
@@ -383,7 +383,7 @@
   <li class="border-bottom"><a href="lithium-battery-raw-material-components.html" class="text-dark"><i class="fa fa-angle-right" aria-hidden="true"></i> Lithium Battery Raw Material Components</a></li>
 
   <li class="border-bottom"><a href="#" class="text-dark"><i class="fa fa-angle-right" aria-hidden="true"></i>  Solar Panels</a></li>
-  <li class="border-bottom"><a href="lithium-batteries-1.html" title="Lithium Batteries" class="text-dark"><i class="fa fa-angle-right" aria-hidden="true"></i> Lithium Batteries </a></li>
+  <li class="border-bottom"><a href="lithium-batteries.html" title="Lithium Batteries" class="text-dark"><i class="fa fa-angle-right" aria-hidden="true"></i> Lithium Batteries </a></li>
   
   </ul>
   </div>
