--- a/raw-materials.html
+++ b/raw-materials.html
@@ -2,13 +2,13 @@
 <html lang="en">
 <head>
   <!-- Title -->
-  <title>About Indygreen Technologies - Solar, Lithium Battery & Hydrogen Solutions</title>
+  <title>Solar PV Raw Materials | Aluminum Frames & Solar Cells - Indygreen Technologies</title>
 
   <!-- Meta Description -->
-  <meta name="description" content="Learn about Indygreen Technologies, a global renewable energy company with 15+ years of expertise in solar, lithium batteries, EV mobility, and hydrogen production. We deliver turnkey solutions and sustainable manufacturing for industries worldwide." />
+  <meta name="description" content="Indygreen Technologies supplies high-quality solar PV raw materials including aluminum frames and high-efficiency solar cells. Reliable, durable, and cost-effective solutions for solar panel manufacturing." />
 
   <!-- Meta Keywords -->
-  <meta name="keywords" content="About Indygreen Technologies, renewable energy company, solar energy factory setup, lithium battery production lines, EV mobility solutions, hydrogen production facilities, turnkey renewable energy solutions, green technologies India, global energy consulting, Inderjit Singh, Harleen Kaur" />
+  <meta name="keywords" content="solar PV raw materials, solar panel raw materials, aluminum frames for solar panels, solar cells supplier, solar module assembly materials, photovoltaic manufacturing materials, solar energy components, raw materials for solar PV production" />
 
   <!-- Robots -->
   <meta name="robots" content="index, follow" />
@@ -17,20 +17,20 @@
   <meta name="author" content="Indygreen Technologies" />
   <meta name="publisher" content="Indygreen Technologies Pvt. Ltd." />
 
-  <!-- Open Graph (Social Sharing) -->
-  <meta property="og:title" content="About Indygreen Technologies - Renewable Energy Experts" />
-  <meta property="og:description" content="Indygreen Technologies is a forward-looking renewable energy company offering solar, lithium battery, EV, and hydrogen solutions with 15+ years of expertise." />
-  <meta property="og:url" content="https://www.indygreentech.com/about" />
+  <!-- Open Graph -->
+  <meta property="og:title" content="Solar PV Raw Materials | Aluminum Frames & Solar Cells - Indygreen Technologies" />
+  <meta property="og:description" content="Get durable aluminum frames and high-efficiency solar cells from Indygreen Technologies – trusted supplier of solar PV raw materials worldwide." />
+  <meta property="og:url" content="https://www.indygreentech.com/raw-materials.html" />
   <meta property="og:type" content="website" />
   <meta property="og:site_name" content="Indygreen Technologies" />
 
   <!-- Twitter Card -->
   <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:title" content="About Indygreen Technologies - Renewable Energy Experts" />
-  <meta name="twitter:description" content="Global renewable energy company delivering turnkey solar, EV, lithium battery & hydrogen solutions across Asia, Africa & the Middle East." />
+  <meta name="twitter:title" content="Solar PV Raw Materials | Aluminum Frames & Solar Cells" />
+  <meta name="twitter:description" content="Indygreen Technologies provides premium raw materials for solar panel production – including aluminum frames and solar cells." />
 
   <!-- Canonical -->
-  <link rel="canonical" href="https://www.indygreentech.com/about" />
+  <link rel="canonical" href="https://www.indygreentech.com/raw-materials.html" />
    <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <!-- Font Awesome for icons -->
@@ -105,7 +105,7 @@
 <ul class="navbar-nav">
 <li class="nav-item mr-0"><a href="index.html" title="Home" class="nav-link active">Home </a></li>
 <li class="nav-item mr-0"><a href="about-us.html" title="About Us" class="nav-link">About Us</a></li>
-<li class="nav-item mr-0"><a href="solar.html" title="Solar PV" class="nav-link">Solar PV</a>
+<li class="nav-item mr-0"><a href="solar-pv.html" title="Solar PV" class="nav-link">Solar PV</a>
 <ul class="dropdown-menu">
 <li class="nav-item"><a href="solar-panel-production-turnkey-line.html" title="Solar Panel Production Turnkey Line" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Solar Panel Production Turnkey Line</a>
 <ul class="dropdown-menu">
@@ -128,7 +128,7 @@
 </ul>
 </li>
 
-<li class="nav-item mr-0"><a href="lithium-batteries-1.html" title="Lithium Batteries" class="nav-link"> Lithium Batteries</a>
+<li class="nav-item mr-0"><a href="lithium-batteries.html" title="Lithium Batteries" class="nav-link"> Lithium Batteries</a>
 <ul class="dropdown-menu">
 <li class="nav-item mr-0"><a href="for-cylindrical-batteries.html" title="For Cylindrical Batteries" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> For Cylindrical Batteries</a>
 <ul class="dropdown-menu">
@@ -158,7 +158,7 @@
 <!--<li class="nav-item mr-0"><a href="#" class="nav-link">OEM Services   </a>
 <ul class="dropdown-menu">
 <li class="nav-item mr-0"><a href="#" title="Solar Panels" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Solar Panels</a></li>
-<li class="nav-item mr-0"><a href="lithium-batteries-1.html" title="Lithium Batteries" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Lithium Batteries </a></li>
+<li class="nav-item mr-0"><a href="lithium-batteries.html" title="Lithium Batteries" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> Lithium Batteries </a></li>
 <li class="nav-item mr-0"><a href="#" class="nav-link"><i class="fa fa-angle-right" aria-hidden="true"></i> E-Charging stations</a></li>
 </ul>
 </li>-->
@@ -178,7 +178,7 @@
 <li><a href="index.html" title="Home">Home</a></li>
 <li><a href="about-us.html" title="About Us">About Us</a></li>
 
-<li><a href="solar.html" title="Solar PV" title="Business Units">Solar PV</a>
+<li><a href="solar-pv.html" title="Solar PV" title="Business Units">Solar PV</a>
 <ul>
 <li>
 <a href="solar-panel-production-turnkey-line.html" title="Solar Panel Production Turnkey Line">Solar Panel Production Turnkey Line</a>
@@ -216,7 +216,7 @@
 
 
 
-<li><a href="lithium-batteries-1.html" title="Lithium Batteries" title="Business Units">Lithium Batteries</a>
+<li><a href="lithium-batteries.html" title="Lithium Batteries" title="Business Units">Lithium Batteries</a>
 <ul>
 <li>
 <a href="for-cylindrical-batteries.html" title="For Cylindrical Batteries">For Cylindrical Batteries</a>
@@ -274,7 +274,7 @@
 <a title="Homepage" href="index.html" class="text-white"><i class="ti ti-home"></i>Home</a>
 </span>
 <span class="ttm-bread-sep text-white">/</span>
-<a title="Homepage" href="solar.html" title="Solar PV" class="text-white"><i class="ti ti-home"></i>Solar PV</a>
+<a title="Homepage" href="solar-pv.html" title="Solar PV" class="text-white"><i class="ti ti-home"></i>Solar PV</a>
 </span>
 <span class="ttm-bread-sep text-white">/</span>
 <span class="text-white">Raw Materials</span>
@@ -352,8 +352,8 @@
   
     <h6><span class="font-italic font-weight-bold">Category Links</span></h6>
   <ul class="mt-2 d-block">
-  <li class="border-bottom"><a href="solar.html" title="Solar PV" class="text-dark"><i class="fa fa-angle-right" aria-hidden="true"></i> Solar PV</a></li>
-  <li class="border-bottom"><a href="lithium-batteries-1.html" title="Lithium Batteries" class="text-dark"><i class="fa fa-angle-right" aria-hidden="true"></i> Lithium Batteries</a></li>
+  <li class="border-bottom"><a href="solar-pv.html" title="Solar PV" class="text-dark"><i class="fa fa-angle-right" aria-hidden="true"></i> Solar PV</a></li>
+  <li class="border-bottom"><a href="lithium-batteries.html" title="Lithium Batteries" class="text-dark"><i class="fa fa-angle-right" aria-hidden="true"></i> Lithium Batteries</a></li>
 
 
 
@@ -378,7 +378,7 @@
   <li class="border-bottom"><a href="#" class="text-dark"><i class="fa fa-angle-right" aria-hidden="true"></i> Lithium Battery Raw Material Components</a></li>
 
   <li class="border-bottom"><a href="#" class="text-dark"><i class="fa fa-angle-right" aria-hidden="true"></i>  Solar Panels</a></li>
-  <li class="border-bottom"><a href="lithium-batteries-1.html" title="Lithium Batteries" class="text-dark"><i class="fa fa-angle-right" aria-hidden="true"></i> Lithium Batteries </a></li>
+  <li class="border-bottom"><a href="lithium-batteries.html" title="Lithium Batteries" class="text-dark"><i class="fa fa-angle-right" aria-hidden="true"></i> Lithium Batteries </a></li>
   
   </ul>
   </div>
